# object_recognition_pico_flexx

./: CMakeLists.txt  README.md  package.xml
launch/: Learner.launch  Recognizer.launch  pico_flex_driver.launch
msg/: RecognizedObject.msg
parameters/: ObjectRecognitionPose.md  pico_flexx_parameters.yaml  settings.json
rviz_config/: pico_flexx_image.rviz
scripts/: Detector.py  JsonManager.py  Learner.py  ObjectManager.py  Recognizer.py  helper.py  learner.py  recognizer.py
